# ln-gateway

./: .dockerignore  .env.example  .gitignore  LICENSE  Makefile  README.md  api.yaml  docker-compose.yml  index.html  package.json
.github/workflows/: ci.yml  deps-update.yml  static-swagger.yml
.husky/: pre-commit
btc-node/: .env.example  .gitignore  Makefile  docker-compose.yml
client/: .env.example  .gitignore  Dockerfile  biome.json  index.html  nginx.conf  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
client/scripts/: gen-api.mjs
client/src/: App.tsx  env.ts  main.tsx  styles.css
client/src/components/: AppError.tsx  StatusCard.tsx
deploy/: .env.example  Makefile  docker-compose.yml
deploy/btc/: Dockerfile  entrypoint.sh
deploy/cln/: Dockerfile  entrypoint.sh
dev/: .env.example  Makefile
dev/bitcoin/: docker-compose.yml
dev/cln-host/: run.sh
node/: .env.example  .gitignore  Makefile  docker-compose.yml
node/cln/: Dockerfile  entrypoint.sh
server/: .env.example  .gitignore  Cargo.toml  Dockerfile  Makefile
server/src/: lib.rs  main.rs  openapi.rs
server/src/context/: mod.rs
server/src/core/: bitcoin_rpc_connector.rs  cli.rs  lightning_rpc_connector.rs  mod.rs  utils.rs
server/src/core/recent_request/: entry.rs  middleware.rs  mod.rs
server/src/routes/: channel_request.rs  health.rs  lnurl_auth_request.rs  mod.rs  recent_requests.rs  withdraw_request.rs
server/src/routes/callbacks/: issue_withdraw.rs  lnurl_auth.rs  mod.rs  open_channel.rs  withdraw_request.rs
server/src/utils/: mod.rs
(+30 files in other folders)
