[package]
name = "ln-server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = "0.8.6"
clap = { version = "4.5.51", features = ["derive", "env"] }
cln-rpc = "0.4.0"
	dotenvy = "0.15"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.20"
uuid = { version = "1.18.1", features = ["v4"] }
